stuff to things

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: home
 <br />
 <p>Hey! My name is Kevin Mulcrone.</p>
 
-<p>I'm a Software Engineer who likes to build cool stuff.</p>
+<p>I'm a Software Engineer who likes to build cool things.</p>
 
 <p>I taught myself how to program in high school so that I could launch <a href="http://web.archive.org/web/20091208222814/http://theperfectlevel.com/" target="_blank">The Perfect Level</a>, an online marketplace that facilitated the sales of Halo 3 and Call of Duty 4 profiles between gamers. I made some money running that, but it was mostly just a way to justify the uncountable hours spent playing Halo 3 with my best friends to my mom.</p>
 
